<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:id="@+id/msg"
        android:layout_height="wrap_content"
        android:layout_below="@+id/msg"
        android:layout_margin="8dp"
        android:background="@drawable/border">
        <TextView
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:textSize="25sp"
            android:layout_weight="0"
            android:layout_height="wrap_content"
            android:text="@string/to"/>
        <TextView
            android:id="@+id/recipient_sent"
            android:layout_width="wrap_content"
            android:textSize="25sp"
            android:layout_marginStart="15dp"
            android:layout_height="wrap_content"
            android:text="@string/dastan"/>
        <TextView
            android:id="@+id/text_message_sent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="25sp"
            android:textColor="#85CB33"
            android:layout_marginStart="15dp"
            android:layout_height="wrap_content"
            android:text="@string/wtsup"/>
</LinearLayout>
